bruh im trying to fix it on iphone and it sucks

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,21 +22,16 @@ html,body{
 }
 @keyframes transform{
     0%{
-        transform: translateY(0%) scale(1) rotate(0deg);
-        -ms-transform: translateY(0%) scale(1) rotate(0deg);
-        -webkit-transform: translateY(0%) scale(1) rotate(0deg);
+        transform: translateY(0%) rotate(0deg) scale(1);
     }
     50%{
-        transform: translateY(0%) scale(1) rotate(0deg);
-        -ms-transform: translateY(0%) scale(1) rotate(0deg);
-        -webkit-transform: translateY(0%) scale(1) rotate(0deg);
+        transform: translateY(0%);
     }
     100%{
-        transform: translateY(-75%) scale(0.5) rotate(360deg);
-        -ms-transform: translateY(-75%) scale(0.5) rotate(360deg);
-        -webkit-transform: translateY(-75%) scale(0.5) rotate(360deg);
+        transform: translateY(-75%) rotate(360deg) scale(0.5);
     }
 }
+
 #main{
 	background-image: linear-gradient(45deg,#0060cf,#0094cf,#007ccf,#00c4ba);
 	position: absolute;
@@ -57,8 +52,8 @@ html,body{
     position: absolute;
     max-width: 50%;
     object-fit: contain;
-    animation-name: shuriken, transform;
-    animation-duration: 3s, 6s;
+    animation-name: shuriken, transform, scale;
+    animation-duration: 3s, 6s, 6s;
     opacity: 1;
     transform: translateY(-75%) scale(0.5) rotate(360deg);
     align-self: center;
